--- a/second-slide.css
+++ b/second-slide.css
@@ -1,8 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-html{
+
+/* html {
+    font-size:62.5%;
+} */
+
+body {
     background-color: #E8762A;
+    font-family:inter;
+}
+
+.upper {
+    text-transform:uppercase;
+}
+.motto {
+    font-size:4rem; 
+    font-size: clamp(2.5rem, 0.7179487179487178rem + 5.47008547008547vw, 4rem);
+    color:white;
+    font-style:italic;
+    font-weight:700;
+}
+
+main {
+    padding:1rem;
+    margin-top:4rem;
+    img {
+        width:110%;
+        margin:0 auto;
+    }
+
+    .img1 {
+        /* transform:translatex(30%); */
+        position:absolute;
+        right:-10rem;
+        bottom:20rem;
+       
+
+    }
+
+    .img2 {
+        position:absolute;
+        bottom:3.5rem;
+        left:-8rem;
+    }
+}
+
+.description {
+    color:white;
+    font-size:.7rem;
+    max-width:50vw;
+    margin-block:1rem;
 }
