--- a/second-slide.css
+++ b/second-slide.css
@@ -23,7 +23,7 @@ body {
     font-size: clamp(2.5rem, 0.7179487179487178rem + 5.47008547008547vw, 4rem);
     color:white;
     font-style:italic;
-    font-weight:700;
+    font-weight:800;
 }
 
 .main {
@@ -42,6 +42,7 @@ main {
 
 .description {
     color:white;
+    font-family:inter;
     font-size:.8rem;
     max-width:50vw;
     margin-block:1rem;
