--- a/main-page.css
+++ b/main-page.css
@@ -14,12 +14,94 @@ body {
     color:white;
     background-color:#EF9651;
     display:flex;   
+    justify-content:space-around;
     padding:2rem;
     gap:2rem;
-    font-size:.7rem;
+    font-size:.8rem;
     border-bottom-left-radius: 1.3rem;
     border-bottom-right-radius: 1.3rem;
     h1,p {
         margin-block:.3rem;
+    }
+}
+
+.search {
+    padding:.7rem;
+    display:block;
+    margin:0 auto;
+    width:90vw;
+    margin-block:2rem;
+    background-color:#E5E5E5;
+    border:0;
+    border-radius:10rem;
+}
+
+input.search::placeholder {
+    font-size:.8rem;
+}
+
+.buttons {
+    margin:0 auto;
+    display:flex;
+    justify-content:space-between;
+    gap:1rem;
+    max-width:90vw;
+
+    a {
+    background-color:#c1c1c15f;
+    border:#c1c1c1 solid 1px;
+    padding:.5rem;
+    padding-inline:1rem;
+    text-decoration:none;
+    color:#8B8B8B;  
+    font-size:.7rem;
+    border-radius:10rem;
+    }
+}
+
+.buttons .breakfast {
+    background-color:#ef955172;
+    color:#EF9651;
+    border:#EF9651 solid 1px;   
+}
+
+.recipes {
+    .r1 {
+        /* background:url('https://images.unsplash.com/photo-1510693206972-df098062cb71?q=80&w=998&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); */
+        background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://images.unsplash.com/photo-1510693206972-df098062cb71?q=80&w=998&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") center/cover no-repeat;
+        background-repeat: no-repeat;
+        background-size:100%;
+        background-position:center;
+        height:15rem;
+        width:90vw;
+        margin:2rem auto;
+        display:flex;
+        flex-direction:column;
+        justify-content:flex-end;
+        align-items:flex-start;
+        border-radius:1.3rem;
+        padding:1.3rem;
+        color:white;
+        gap:.4rem;
+        img {
+            width:.8rem;
+        }
+        p {
+            font-size:.8rem;
+        }
+        .time {
+            display:inline-flex;
+            align-items:center;
+            gap:.3rem;
+            filter:brightness(100%) !important;
+        }
+    }
+
+    .r2 {
+        background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://images.unsplash.com/photo-1567620905732-2d1ec7ab7445?q=80&w=1980&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") center/cover no-repeat;
+    }
+
+    .r3 {
+        background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("https://images.unsplash.com/photo-1565299585323-38d6b0865b47?q=80&w=780&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D") center/cover no-repeat;
     }
 }
